# texas-holdem-ai

./: .env  .gitignore  CMakeLists.txt  Card.cpp  Card.hpp  Card.py  CardCollection.cpp  CardCollection.hpp  CheatSheet.cpp  CheatSheet.hpp  Deck.py  GameManager.py  Hand.cpp  Hand.hpp  HandGroup.cpp  HandGroup.hpp  HandRank.cpp  HandRank.hpp  HumanPlayer.py  Oracle.cpp  Oracle.hpp  PlayerABC.py  README.md  RandomPlayer.py  RationalPlayer.py  ResolverPlayer.py  State.py  StateNode.py  StateNode.test.py  StateNode_test.py  State_test.py  TerminalColors.cpp  TerminalColors.hpp  TerminalColors.py  cheat-sheet.txt  cheat_sheet_test.py  cpp_poker_module.cpp  db.sqlite  db_interface.py  env_helpers.py  (+26 more)
archive/: fix_range_data_errors.ipynb
cpp_poker/: README.md
hidden_state_model/: README.md  action_model.ipynb  action_model.py  helpers.py  interface.py  model.ipynb  observer.py  observer_test.py  predictor.py  prob_model.ipynb  prob_model.py  processor.py  raise_model.py  rank_model.ipynb  rank_model.py  weigthing.py
nn/: cv.py  cv_and_train_nn.py  run_nn_model.py  test.py  train.py  train_nn.ipynb  train_nn.py  training_results_flop.html  training_results_river.html  training_results_turn.html
players/: AllInPlayer.py  AwareRationalPlayer.py  AwareRationalPlayerWithRandomStyle.py  BlendedPlayer.py  CheatingPlayer.py  HumanMocker.py  HumanPlayer.py  LLMPlayer.py  MaxEVPlayer.py  MaxEVandHumanMocker.py  MaxEVandLLMPlayer.py  MixedPlayer.py  PersistentLLMPlayer.py  ProbRegPlayer.py  ProbSimPlayer.py  ProbSimPlayer_test.py  RandomPlayer.py  RationalPlayer.py  WebPlayer.py  (+2 more)
(+53 files in other folders)
